@@ -58,9 +58,9 @@ public class GMConfiguration {
     	return GMconfig.getBoolean("settings.config.opOverrides", true);
     }
 
-    @SuppressWarnings("unchecked")
-	public Map<String, Object> getMirrorsMap() {    	
-    	return (Map<String, Object>) GMconfig.getList("settings.permission.world.mirror");
+	public Map<String, Object> getMirrorsMap() {   
+    	
+    	return (Map<String, Object>) GMconfig.getConfigurationSection("settings.permission.world.mirror").getValues(false);
     }
 
     public Integer getSaveInterval() {   	
