@@ -46,3 +46,4 @@ v 1.4:
 	- Removed extra notification messages for the player issuing the group move command.
 	- Added a config setting - bukkit_perms_override: false
 	  Enable to allow default Bukkit based permissions to remain enabled, unless directly negated within GroupManager.
+	- Fixed reading world mirrors from the config.
